--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cubey</title>
+    <title>Shooter</title>
     <script src="./lib/phaser.js"></script>
-    <script src="./src/Scenes/Smiley.js"></script>
+    <script src="./src/Scenes/Movement.js"></script>
     <script src="./src/main.js"></script>
 </head>
 <body>
